2004-07-11  Miguel Sofer <msofer@users.sf.net>

	* generic/tclExecute.c (TEBC): fixed leak of expandNestList objs 
	when there is an error while an expansion is in progress (code
	added at checkForCatch).
	
2004-07-11  Vince Darley  <vincentdarley@users.sourceforge.net>

	* generic/tclIOUtil.c: fix to 'cd' bug when vfs is active
	[Bug 986944 in tclvfs project] - this bug recently introduced
	by some threading fixes.  Need to work out how to add
	tests for this.

2004-07-10  Kevin Kenny  <kennykb@acm.org>

	* tests/clock.test (clock-2.11): Changed the test so that
	it isn't an infinite loop when run under valgrind on a slow
	virtual machine.  Thanks to Miguel Sofer for the bug report.
	Also put in code to restore env(LC_TIME) after tests complete,
	silencing a warning from 'make TESTFLAGS="-debug 1" test'.
	
2004-07-08  Miguel Sofer <msofer@users.sf.net>

	* generic/tclBasic.c (DeleteInterpProc): reverted the modification
	of 3 days ago, as the leak of [Bug 983660] is now handled by the
	change in TclCleanupByteCode.
	* generic/tclCompile.c (TclCleanupByteCode): let each bytecode
	remove its references to literals at interp deletion, without
	updating the dying literal table.
	* generic/tclLiteral.c (TclDeleteLiteralTable): with the above
	change to TclCleanupByteCode, this function now removes a single
	reference to the literal object and cleans up its own structures.

2004-07-08  Kevin Kenny  <kennykb@acm.org>

	* win/tclWinInit.c (AppendEnvironment): Silenced a compilation
	warning about a type mismatch.
	
2004-07-07  Miguel Sofer <msofer@users.sf.net>

	* generic/tclCompile.c (TclCompileScript): fix for [Bug 458361]. 
	Single-word scripts are compiled with an unshared cmdName to avoid
	shimmering between bytecode and cmdName reps.	

2004-07-07  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclCmdMZ.c (TclMergeReturnOptions):  Simplified logic and
	removed potential memory leak.  [Bug 986257].

2004-07-07  Donal K. Fellows  <donal.k.fellows@man.ac.uk>
